The Most basic kafka java producer